--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["json", "macros"] }
 color-eyre = "0.6.2"
 hyper = "1.2.0"
 serde = { version = "1.0.197", features = ["derive"] }
@@ -15,9 +15,11 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.0"
 
-tower-http = { version = "0.4.0", features = ["cors", "trace"] } # added
-http = "0.2.9"
+tower-http = { version = "0.5.0", features = ["cors", "trace"] } # added
+http = "1.1.0"
 clap = { version = "4.5.2", features = ["derive"] }
 dotenv = "0.15.0"
 regex = "1.10.3"
 uuid = { version = "1.7.0", features = ["v6", "serde"] }
+axum-macros = "0.4.1"
+tower = "0.4.13"
